--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "plutus-pioneer-program"]
 	path = plutus-pioneer-program
 	url = https://github.com/input-output-hk/plutus-pioneer-program.git
+[submodule "plutus"]
+	path = plutus
+	url = https://github.com/ubiodee/plutus
